Fix spacing in applicant signup form

--- a/src/components/RemoveButton/styles.module.scss
+++ b/src/components/RemoveButton/styles.module.scss
@@ -3,6 +3,7 @@
 .remove {
   cursor: pointer;
   font-weight: bold;
+  margin-bottom: auto;
   user-select: none;
 
   &:hover {
