--- a/src/pages/Applicant/SignUp/PersonalInformationFormSection/styles.module.scss
+++ b/src/pages/Applicant/SignUp/PersonalInformationFormSection/styles.module.scss
@@ -31,4 +31,9 @@ div.padron {
   .secondRow {
     flex-direction: column;
   }
+
+  div.surname,
+  div.padron {
+    margin-top: $spacing-m;
+  }
 }
